@startuml Registry States
title State Machine for Segment Registry 

state READY
state FREEZE
state CLOSED
state ERROR


[*] --> READY
READY --> FREEZE : tryEnterFreeze
FREEZE --> READY
FREEZE --> CLOSED : close()
CLOSED --> READY

ERROR -[hidden]-> FREEZE

note right of ERROR
  Any state can transition to ERROR
  on index or IO failure.
end note

@enduml